fixed weird spacing on tiles

--- a/css/skin.css
+++ b/css/skin.css
@@ -2213,21 +2213,21 @@ body,
 .shop .products .overlay-info .product-title,
 .overlay-info > span > span{
 	font-size: 1.5rem;
-	font-weight: 400;
-	line-height: 1.2;
+	font-weight: 500;
+	line-height: 1.5;
 	letter-spacing: 0.1rem;
 	text-transform: uppercase;
 	color: #fff;
 }
-.project-subtitle {
+/* .project-subtitle {
 	font-size: 1.25rem;
 	font-weight: 400;
 	line-height: 1.75;
 	letter-spacing: 0.1rem;
 	color: #fff;
-}
+} */
 .overlay-info .project-description{
-	margin-bottom: 125px;
+	margin-bottom: 100px;
 	display: block;
 	font-size: 1.5rem;
 	opacity: 1;
